fixed button and cursor display, removed white space at very top of site, working on modal styling for forms

--- a/frontend/src/components/styles/DeleteForm.css
+++ b/frontend/src/components/styles/DeleteForm.css
@@ -37,3 +37,8 @@ We just translate this to the center and we are good */
   padding-bottom: 10px;
   padding-top: 10px;
 }
+
+.delete-modal-form {
+  border: 3px solid black;
+  border-radius: 5px;
+}
