--- a/frontend/src/components/styles/Navigation.css
+++ b/frontend/src/components/styles/Navigation.css
@@ -178,7 +178,7 @@
   right: 0;
   left: 0;
   /* navbar was a tiny div with basically no height at the very top of the page */
-  height: 130px;
+  height: 90px;
   /* height: 80px; */
   width: 100%;
   display: flex;
